# kenopsia-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README-v0.2.0-overlay.md  README.md  RELEASE_NOTES.md  ROADMAP.md  UPGRADE.md  kenopsia.py  pyproject.toml  requirements.txt
collectors/: __init__.py  fedora.py  hardware.py  memory.py  networking.py  security.py  services.py  storage.py  system.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DESIGN_PHILOSOPHY.md  INSTALL.md  RELEASE_NOTES.md  ROADMAP.md  SPRINT1_MILESTONE2.md  SPRINT1_MILESTONE2_COMPAT_FIX.md  SPRINT1_MILESTONE3.md  SPRINT1_MILESTONE4.md  UPGRADE.md  v0.2.0-assessment-foundation.md
kenopsia/: __init__.py  cli.py  engine.py  findings.py  recommendations.py  report.py  scoring.py  utils.py  version.py
kenopsia/assessment/: __init__.py  engine.py  findings.py  inventory.py  recommendations.py  registry.py  scoring.py
kenopsia/collectors/: __init__.py  security.py  storage.py
kenopsia/normalization/: __init__.py  adapters.py  security.py  services.py  storage.py
kenopsia/rendering/: assessment_markdown.py  html.py  normalized_html.py  normalized_json.py  normalized_markdown.py
kenopsia/runtime/: __init__.py  normalized.py
plugins/: README.md
scripts/: build.sh  run.sh  run_normalized_assessment.py  run_v020_assessment.py  validate.sh
templates/: report.html
tests/: conftest.py  test_assessment_engine_v020.py  test_assessment_framework.py  test_import.py  test_normalization_m3.py  test_runtime_m4.py  test_security_collector_v021.py
(+6 files in other folders)
